--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,17 +423,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Temp\\ipykernel_2164\\401889612.py:13: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  dfo = dfo1.append(dfo2)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -830,7 +822,7 @@
        "[549 rows x 21 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,18 +847,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    160\n",
-       "1    114\n",
+       "0    151\n",
+       "1    123\n",
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1225,7 @@
        "[549 rows x 17 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,33 +1245,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-0.0323535 ],\n",
-       "        [-0.66025155],\n",
-       "        [-1.2120844 ],\n",
-       "        [ 0.00584775],\n",
-       "        [ 0.03366245],\n",
-       "        [-0.71237212],\n",
-       "        [ 3.23202401],\n",
-       "        [ 2.1218262 ],\n",
-       "        [-0.23254249],\n",
-       "        [-0.47287289],\n",
-       "        [ 0.72010217],\n",
-       "        [-0.6629614 ],\n",
-       "        [-1.03272693],\n",
-       "        [ 0.04477538],\n",
-       "        [-1.18125024],\n",
-       "        [ 0.5549822 ],\n",
-       "        [-1.39741281]]),\n",
-       " 0.027361751551362678)"
+       "(array([[-0.02379902],\n",
+       "        [ 1.91617978],\n",
+       "        [-0.03574279],\n",
+       "        [ 0.00320887],\n",
+       "        [ 0.04353848],\n",
+       "        [-0.15203186],\n",
+       "        [ 0.79423054],\n",
+       "        [ 0.8501062 ],\n",
+       "        [-0.1059601 ],\n",
+       "        [ 1.22200875],\n",
+       "        [-0.43877985],\n",
+       "        [-0.83959886],\n",
+       "        [-0.19160052],\n",
+       "        [-1.28357297],\n",
+       "        [-0.34873407],\n",
+       "        [-0.93659684],\n",
+       "        [-0.15463365]]),\n",
+       " 0.03520989966124139)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,12 +1305,50 @@
     "\n",
     "# ---------------------------------------- #\n",
     "\n",
-    "w,b"
+    "w, b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': -0.023799024835772634,\n",
+       " 'hypertension': 1.9161797751759362,\n",
+       " 'heart_disease': -0.03574279385007104,\n",
+       " 'avg_glucose_level': 0.0032088682736495047,\n",
+       " 'bmi': 0.04353848245863595,\n",
+       " 'gender': -0.15203185531201022,\n",
+       " 'ever_married_Yes': 0.7942305423397298,\n",
+       " 'work_type_Govt_job': 0.8501062047083867,\n",
+       " 'work_type_Never_worked': -0.10596010452077866,\n",
+       " 'work_type_Private': 1.2220087468386893,\n",
+       " 'work_type_Self-employed': -0.43877985033056516,\n",
+       " 'work_type_children': -0.8395988620444941,\n",
+       " 'Residence_type_Urban': -0.19160052444727962,\n",
+       " 'smoking_status_Unknown': -1.2835729696956033,\n",
+       " 'smoking_status_formerly smoked': -0.3487340675519495,\n",
+       " 'smoking_status_never smoked': -0.9365968419217553,\n",
+       " 'smoking_status_smokes': -0.15463364674369248}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = list(dfa.columns)\n",
+    "res = {columns[i]: float(w[i]) for i in range(len(w))}\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1331,10 +1361,10 @@
     {
      "data": {
       "text/plain": [
-       "0.33090909090909093"
+       "0.3381818181818182"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
