--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1310,40 +1310,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'age': -0.023799024835772634,\n",
-       " 'hypertension': 1.9161797751759362,\n",
-       " 'heart_disease': -0.03574279385007104,\n",
-       " 'avg_glucose_level': 0.0032088682736495047,\n",
-       " 'bmi': 0.04353848245863595,\n",
-       " 'gender': -0.15203185531201022,\n",
-       " 'ever_married_Yes': 0.7942305423397298,\n",
-       " 'work_type_Govt_job': 0.8501062047083867,\n",
-       " 'work_type_Never_worked': -0.10596010452077866,\n",
-       " 'work_type_Private': 1.2220087468386893,\n",
-       " 'work_type_Self-employed': -0.43877985033056516,\n",
-       " 'work_type_children': -0.8395988620444941,\n",
-       " 'Residence_type_Urban': -0.19160052444727962,\n",
-       " 'smoking_status_Unknown': -1.2835729696956033,\n",
-       " 'smoking_status_formerly smoked': -0.3487340675519495,\n",
-       " 'smoking_status_never smoked': -0.9365968419217553,\n",
-       " 'smoking_status_smokes': -0.15463364674369248}"
+       "[('hypertension', 1.9161797751759362),\n",
+       " ('work_type_Private', 1.2220087468386893),\n",
+       " ('work_type_Govt_job', 0.8501062047083867),\n",
+       " ('ever_married_Yes', 0.7942305423397298),\n",
+       " ('bmi', 0.04353848245863595),\n",
+       " ('avg_glucose_level', 0.0032088682736495047),\n",
+       " ('age', -0.023799024835772634),\n",
+       " ('heart_disease', -0.03574279385007104),\n",
+       " ('work_type_Never_worked', -0.10596010452077866),\n",
+       " ('gender', -0.15203185531201022),\n",
+       " ('smoking_status_smokes', -0.15463364674369248),\n",
+       " ('Residence_type_Urban', -0.19160052444727962),\n",
+       " ('smoking_status_formerly smoked', -0.3487340675519495),\n",
+       " ('work_type_Self-employed', -0.43877985033056516),\n",
+       " ('work_type_children', -0.8395988620444941),\n",
+       " ('smoking_status_never smoked', -0.9365968419217553),\n",
+       " ('smoking_status_Unknown', -1.2835729696956033)]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from collections import OrderedDict\n",
+    "\n",
     "columns = list(dfa.columns)\n",
     "res = {columns[i]: float(w[i]) for i in range(len(w))}\n",
-    "res"
+    "sorted(res.items(), key=lambda t: t[1], reverse=True)"
    ]
   },
   {
