--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "[549 rows x 21 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,34 +855,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    160\n",
-       "1    114\n",
+       "-1    143\n",
+       " 1    131\n",
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural']).astype(float)\n",
+    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural','smoking_status_formerly smoked']).astype(float)\n",
     "# dfa = dfa.drop(columns=['work_type_Never_worked','work_type_Private','work_type_Self-employed','work_type_children'])\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(dfa, dfo['stroke'], train_size=0.5)\n",
-    "\n",
+    "y_train = y_train.replace(to_replace=0,value=-1)\n",
+    "y_test = y_test.replace(to_replace=0,value=-1)\n",
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,6 @@
        "      <th>work_type_children</th>\n",
        "      <th>Residence_type_Urban</th>\n",
        "      <th>smoking_status_Unknown</th>\n",
-       "      <th>smoking_status_formerly smoked</th>\n",
        "      <th>smoking_status_never smoked</th>\n",
        "      <th>smoking_status_smokes</th>\n",
        "    </tr>\n",
@@ -942,7 +942,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -963,7 +962,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -978,7 +976,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1004,7 +1001,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1022,13 +1018,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1064,7 +1058,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4977</th>\n",
@@ -1082,7 +1075,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -1101,7 +1093,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1122,7 +1113,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -1142,13 +1132,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>549 rows × 17 columns</p>\n",
+       "<p>549 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1204,36 +1193,23 @@
        "5018                   1.0                     0.0   \n",
        "5087                   0.0                     0.0   \n",
        "\n",
-       "      smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
-       "0                                1.0                          0.0   \n",
-       "1                                0.0                          0.0   \n",
-       "2                                0.0                          1.0   \n",
-       "3                                0.0                          0.0   \n",
-       "4                                0.0                          1.0   \n",
-       "...                              ...                          ...   \n",
-       "4976                             0.0                          0.0   \n",
-       "4977                             1.0                          0.0   \n",
-       "4999                             0.0                          1.0   \n",
-       "5018                             0.0                          1.0   \n",
-       "5087                             0.0                          1.0   \n",
+       "      smoking_status_never smoked  smoking_status_smokes  \n",
+       "0                             0.0                    0.0  \n",
+       "1                             0.0                    1.0  \n",
+       "2                             1.0                    0.0  \n",
+       "3                             0.0                    0.0  \n",
+       "4                             1.0                    0.0  \n",
+       "...                           ...                    ...  \n",
+       "4976                          0.0                    0.0  \n",
+       "4977                          0.0                    0.0  \n",
+       "4999                          1.0                    0.0  \n",
+       "5018                          1.0                    0.0  \n",
+       "5087                          1.0                    0.0  \n",
        "\n",
-       "      smoking_status_smokes  \n",
-       "0                       0.0  \n",
-       "1                       1.0  \n",
-       "2                       0.0  \n",
-       "3                       0.0  \n",
-       "4                       0.0  \n",
-       "...                     ...  \n",
-       "4976                    0.0  \n",
-       "4977                    0.0  \n",
-       "4999                    0.0  \n",
-       "5018                    0.0  \n",
-       "5087                    0.0  \n",
-       "\n",
-       "[549 rows x 17 columns]"
+       "[549 rows x 16 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obeso():\n",
+    "    pass\n",
+    "\n",
+    "def idoso():\n",
+    "    pass "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,107 +1242,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 331,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([[-0.0323535 ],\n",
-       "        [-0.66025155],\n",
-       "        [-1.2120844 ],\n",
-       "        [ 0.00584775],\n",
-       "        [ 0.03366245],\n",
-       "        [-0.71237212],\n",
-       "        [ 3.23202401],\n",
-       "        [ 2.1218262 ],\n",
-       "        [-0.23254249],\n",
-       "        [-0.47287289],\n",
-       "        [ 0.72010217],\n",
-       "        [-0.6629614 ],\n",
-       "        [-1.03272693],\n",
-       "        [ 0.04477538],\n",
-       "        [-1.18125024],\n",
-       "        [ 0.5549822 ],\n",
-       "        [-1.39741281]]),\n",
-       " 0.027361751551362678)"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import autograd.numpy as np_\n",
     "import numpy as np\n",
     "from autograd import grad\n",
     "\n",
-    "# X_train, X_test, y_train, y_test\n",
+    "# ---------------------------------------- #\n",
     "\n",
-    "def loss( parametros ):\n",
-    "    w, b, pontos, val = parametros\n",
+    "def predict( w, b, pontos ):\n",
     "    est = w.T @ pontos + b\n",
-    "    mse = np_.mean( (est - val)**2)\n",
-    "    return mse\n",
+    "    return est\n",
     "\n",
-    "g = grad(loss)\n",
     "\n",
-    "pontos = X_train.T\n",
-    "alvos = (y_train).astype(float)\n",
-    "\n",
-    "w = np.random.randn( pontos.shape[0],1)\n",
-    "b = 0.0\n",
-    "alpha = 0.000001\n",
-    "\n",
-    "for n in range(100000):\n",
-    "    grad_ = g( (w, b, pontos, alvos) )\n",
-    "    w -= alpha*grad_[0]\n",
-    "    b -= alpha*grad_[1]\n",
+    "def accuracy(y_test, y_est):\n",
+    "    return np.mean(np.sign(y_test)==np.sign(y_est))\n",
     "\n",
     "# ---------------------------------------- #\n",
     "\n",
-    "w,b"
+    "results = []\n",
+    "for _ in range(10):\n",
+    "    def loss( parametros ):\n",
+    "        w, b, pontos, val = parametros\n",
+    "        est = w.T @ pontos + b\n",
+    "        mse = np_.mean( (est - val)**2)\n",
+    "        return mse\n",
+    "\n",
+    "    g = grad(loss)\n",
+    "\n",
+    "    pontos = X_train.T\n",
+    "    alvos = (y_train).astype(float)\n",
+    "\n",
+    "    w = np.random.randn( pontos.shape[0],1)\n",
+    "    b = 0.0\n",
+    "    alpha = 0.000001\n",
+    "\n",
+    "    for n in range(1000000):\n",
+    "        grad_ = g( (w, b, pontos, alvos) )\n",
+    "        w -= alpha*grad_[0]\n",
+    "        b -= alpha*grad_[1]\n",
+    "\n",
+    "    y_pred = (predict( w, b, X_test.T )).reshape((y_test.shape))\n",
+    "\n",
+    "    results.append(accuracy(y_test, y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RESULTS FOR RANGE 1.000.000\n",
+    "mean,std = 0.7752727272727272, 0.05434630310478373"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "results = [0.8436363636363636,\n",
+    " 0.7963636363636364,\n",
+    " 0.8436363636363636,\n",
+    " 0.6872727272727273,\n",
+    " 0.7018181818181818,\n",
+    " 0.8072727272727273,\n",
+    " 0.7745454545454545,\n",
+    " 0.8218181818181818,\n",
+    " 0.72,\n",
+    " 0.7563636363636363]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(275,) (275,)\n"
+      "0.7752727272727272\n",
+      "0.05434630310478373\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.33090909090909093"
+       "[0.8436363636363636,\n",
+       " 0.7963636363636364,\n",
+       " 0.8436363636363636,\n",
+       " 0.6872727272727273,\n",
+       " 0.7018181818181818,\n",
+       " 0.8072727272727273,\n",
+       " 0.7745454545454545,\n",
+       " 0.8218181818181818,\n",
+       " 0.72,\n",
+       " 0.7563636363636363]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def predict( w, b, pontos ):\n",
-    "    est = w.T @ pontos + b\n",
-    "    return est\n",
+    "print(np.array(results).mean())\n",
+    "print(np.array(results).std())\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "df_features = dfa\n",
+    "df_rotulo = df['stroke']\n",
+    "tree = DecisionTreeClassifier(criterion='entropy')\n",
     "\n",
-    "y_pred = (predict( w, b, X_test.T )).reshape((275,))\n",
+    "# Agora, vamos usar o método .fit() para ajustar os parâmetros da árvore:\n",
+    "tree.fit(df_features, df_rotulo)\n",
     "\n",
-    "# ---------------------------------------- #\n",
+    "# Podemos visualizar a árvore de decisão em uma figura!\n",
+    "from sklearn.tree import plot_tree\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "def accuracy(y_test, y_est):\n",
-    "    return np.mean(np.sign(y_test)==np.sign(y_est))\n",
-    "\n",
-    "print(y_test.shape,y_pred.shape)\n",
-    "\n",
-    "accuracy(y_test, y_pred)"
+    "plt.figure( figsize=(20,20) )\n",
+    "a = plot_tree(tree, feature_names=df_features.columns, fontsize=15, \n",
+    "              node_ids=False, impurity=False, filled=True)\n"
    ]
   }
  ],
