--- a/demo.ipynb
+++ b/demo.ipynb
@@ -246,8 +246,10 @@
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "df_features = dfa\n",
-    "df_rotulo = df['stroke']\n",
+    "print(dfa)\n",
+    "df_features = pd.DataFrame(X_test)\n",
+    "print(df_features)\n",
+    "df_rotulo = pd.DataFrame(y_test)\n",
     "tree = DecisionTreeClassifier(criterion='entropy')\n",
     "\n",
     "# Agora, vamos usar o método .fit() para ajustar os parâmetros da árvore:\n",
