--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -65,6 +73,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['stroke'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Amostragem\n",
+    "\n",
+    "O primeiro passo para garantir uma análise mais próxima da realidade é a remoção de parcialidades, no nosso caso, identificamos que nossos dados eram majoritariamente de pessoas que não sofreram de AVC's, portanto havia um viés tendendo a essa direção o que poderia reduzir a credibilidade de nosso algoritmo.\n",
+    "\n",
+    "Para contornar tal problema, decidimos limitar nosso tamanho de amostra para que houvesse uma relação mais próxima de 1 para 1 entre casos em que um individuo sofreu ou não um AVC. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# normalizing dataframe.\n",
     "\n",
     "filtery = (df['stroke'] == 0)\n",
@@ -80,16 +109,27 @@
     "# ----------------- #\n",
     "\n",
     "# excluding more redundant data.\n",
-    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural','smoking_status_formerly smoked']).astype(float)\n",
-    "\n",
-    "# train prep\n",
+    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural','smoking_status_formerly smoked']).astype(float)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Separando dados em teste e treino"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_train, X_test, y_train, y_test = train_test_split(dfa, dfo['stroke'], train_size=0.5)\n",
     "y_train = y_train.replace(to_replace=0,value=-1)\n",
     "y_test = y_test.replace(to_replace=0,value=-1)\n",
-    "y_train.value_counts()\n",
-    "\n",
-    "\n",
-    "# ----------------- #"
+    "y_train.value_counts()"
    ]
   },
   {
@@ -100,6 +140,18 @@
    "source": [
     "# To Numpy\n",
     "X_train,X_test,y_train,y_test = X_train.to_numpy(),X_test.to_numpy(),y_train.to_numpy(),y_test.to_numpy()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Métodos e funções\n",
+    "\n",
+    "- acurracy\n",
+    "\n",
+    "- eqm"
    ]
   },
   {
@@ -118,13 +170,21 @@
     "def accuracy(y_test, y_est): # Compares extrapolated data with real data.\n",
     "    return np.mean(np.sign(y_test) == np.sign(y_est))\n",
     "\n",
-    "def loss( parametros ): # \n",
+    "def eqm( parametros ): # \n",
     "    w, b, pontos, val = parametros\n",
     "    est = w.T @ pontos + b\n",
     "    mse = np_.mean( (est - val)**2)\n",
     "    return mse\n",
     "\n",
     "# ---------------------------------------- #"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Teste de acurácia"
    ]
   },
   {
@@ -138,7 +198,7 @@
     "\n",
     "results = []\n",
     "for _ in range(10):\n",
-    "    g = grad(loss)\n",
+    "    g = grad(eqm)\n",
     "\n",
     "    pontos = X_train.T\n",
     "    alvos = (y_train).astype(float)\n",
@@ -147,7 +207,7 @@
     "    b = 0.0\n",
     "    alpha = 0.000001\n",
     "\n",
-    "    for n in range(1000):\n",
+    "    for n in range(10000):\n",
     "        grad_ = g( (w, b, pontos, alvos) )\n",
     "        w -= alpha*grad_[0]\n",
     "        b -= alpha*grad_[1]\n",
@@ -185,7 +245,7 @@
    "source": [
     "# Generating prediction values.\n",
     "\n",
-    "g = grad(loss)\n",
+    "g = grad(eqm)\n",
     "\n",
     "pontos = X_train.T\n",
     "alvos = (y_train).astype(float)\n",
@@ -203,6 +263,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizando os fatores de relevância"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -213,29 +281,6 @@
     "columns = list(dfa.columns)\n",
     "res = {columns[i]: float(w[i]) for i in range(len(w))}\n",
     "sorted(res.items(), key=lambda t: t[1], reverse=True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[('smoking_status_never smoked', 1.9662127728927499),\n",
-    " ('work_type_Govt_job', 1.5288039518764849),\n",
-    " ('heart_disease', 1.3447350243293723),\n",
-    " ('work_type_Private', 0.7072463824185442),\n",
-    " ('ever_married_Yes', 0.4894299210636069),\n",
-    " ('hypertension', 0.26751445224545006),\n",
-    " ('work_type_children', 0.11226938267801652),\n",
-    " ('bmi', 0.028330032893819176),\n",
-    " ('gender', 0.0008012721255334959),\n",
-    " ('avg_glucose_level', -0.0048443433053298015),\n",
-    " ('age', -0.007321216850998305),\n",
-    " ('smoking_status_smokes', -0.6108328187336413),\n",
-    " ('Residence_type_Urban', -0.6731651799177507),\n",
-    " ('smoking_status_Unknown', -0.7852556759763394),\n",
-    " ('work_type_Never_worked', -1.1298236983714267),\n",
-    " ('work_type_Self-employed', -1.7866693388941148)]"
    ]
   },
   {
