--- a/demo.ipynb
+++ b/demo.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -269,54 +269,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29224</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>91.23</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>49894</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>206.53</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>37526</td>\n",
        "      <td>68.0</td>\n",
        "      <td>1</td>\n",
@@ -340,7 +292,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>29095</td>\n",
        "      <td>71.0</td>\n",
        "      <td>1</td>\n",
@@ -363,6 +315,54 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>65196</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>198.79</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42545</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77.55</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 23 columns</p>\n",
@@ -371,50 +371,50 @@
       "text/plain": [
        "      id   age  hypertension  heart_disease  avg_glucose_level  bmi  stroke  \\\n",
        "0  34248  50.0             1              0              81.96  0.0       0   \n",
-       "1  29224  30.0             0              0              91.23  0.0       0   \n",
-       "2  49894  78.0             1              1             206.53  0.0       0   \n",
-       "3  37526  68.0             1              1             233.30  0.0       0   \n",
-       "4  29095  71.0             1              0              93.60  0.0       0   \n",
+       "1  37526  68.0             1              1             233.30  0.0       0   \n",
+       "2  29095  71.0             1              0              93.60  0.0       0   \n",
+       "3  65196  75.0             1              0             198.79  0.0       0   \n",
+       "4  42545  29.0             1              0              77.55  0.0       0   \n",
        "\n",
        "   female  gender_Male  gender_Other  ...  work_type_Never_worked  \\\n",
        "0       0            1             0  ...                       0   \n",
-       "1       0            1             0  ...                       0   \n",
-       "2       1            0             0  ...                       0   \n",
-       "3       1            0             0  ...                       0   \n",
+       "1       1            0             0  ...                       0   \n",
+       "2       0            1             0  ...                       0   \n",
+       "3       0            1             0  ...                       0   \n",
        "4       0            1             0  ...                       0   \n",
        "\n",
        "   work_type_Private  work_type_Self-employed  work_type_children  \\\n",
        "0                  1                        0                   0   \n",
        "1                  1                        0                   0   \n",
-       "2                  1                        0                   0   \n",
+       "2                  0                        1                   0   \n",
        "3                  1                        0                   0   \n",
-       "4                  0                        1                   0   \n",
+       "4                  1                        0                   0   \n",
        "\n",
        "   Residence_type_Rural  Residence_type_Urban  smoking_status_Unknown  \\\n",
        "0                     0                     1                       0   \n",
-       "1                     0                     1                       0   \n",
+       "1                     1                     0                       1   \n",
        "2                     1                     0                       0   \n",
-       "3                     1                     0                       1   \n",
-       "4                     1                     0                       0   \n",
+       "3                     1                     0                       0   \n",
+       "4                     0                     1                       0   \n",
        "\n",
        "   smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
        "0                               1                            0   \n",
        "1                               0                            0   \n",
        "2                               0                            1   \n",
        "3                               0                            0   \n",
-       "4                               0                            1   \n",
+       "4                               1                            0   \n",
        "\n",
        "   smoking_status_smokes  \n",
        "0                      0  \n",
-       "1                      1  \n",
+       "1                      0  \n",
        "2                      0  \n",
-       "3                      0  \n",
+       "3                      1  \n",
        "4                      0  \n",
        "\n",
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
     "# ---------------------------------------- #\n",
     "\n",
     "df = pd.get_dummies(dfo) # converte dados não numéricos em dados numéricos.\n",
-    "df.rename(columns={\"gender_Female\": \"female\"}, inplace = True)\n",
+    "df.rename(columns={\"gender_Female\": \"gender\"}, inplace = True)\n",
     "\n",
     "# ---------------------------------------- #\n",
     "\n",
@@ -517,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "# como esclarecido na seção 'Preparando o DataSet' removemos dados redundantes aqui.\n",
-    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','Residence_type_Rural','smoking_status_formerly smoked']).astype(float)"
+    "dfa = dfo.drop(columns=['stroke','id','ever_married_No','gender_Male','gender_Other','Residence_type_Rural','smoking_status_formerly smoked']).astype(float)"
    ]
   },
   {
@@ -818,7 +818,7 @@
     }
    ],
    "source": [
-    "from collections import OrderedDict\n",
+    "# Coloca os nomes respectivos nos fatores e os organiza\n",
     "\n",
     "columns = list(dfa.columns)\n",
     "res = {columns[i]: float(w[i]) for i in range(len(w))}\n",
